--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This File just use for practices and not for developing new projects",
   "main": "index.js",
   "scripts": {
-    "build": "tailwindcss -i ./src/input.css -o ./public/style.css --watch 1"
+    "build": "tailwindcss -i ./src/input.css -o ./public/style.css --watch"
   },
   "keywords": [],
   "author": "",
